--- a/package.json
+++ b/package.json
@@ -16,13 +16,35 @@
     "test:coverage": "nyc npm test -- --no-cache --verbose",
     "test:travis": "nyc npm test -- --no-cache --verbose",
     "test:appveyor": "nyc npm test -- --no-cache --verbose",
-    "watch:test": "npm test -- --watch",
+    "watch:test": "npm test -- --no-cache --watch",
     "lint": "eslint --ext .js index.js cli.js register.js parse-argv.js",
     "travis:test": "npm test",
     "precommit": "run-s lint test",
     "commitmsg": "validate-commit-msg",
     "prerelease": "npm test",
     "release": "standard-version"
+  },
+  "dependencies": {
+    "colors": "^1.2.3",
+    "crypto": "^1.0.1",
+    "glob": "^7.1.2",
+    "os-homedir": "^1.0.2"
+  },
+  "devDependencies": {
+    "ava": "^0.25.0",
+    "codecov": "^3.0.1",
+    "conventional-commit-types": "^2.2.0",
+    "cross-env": "^5.1.4",
+    "cross-spawn": "^6.0.5",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "husky": "^0.14.3",
+    "npm-check-updates": "^2.14.2",
+    "npm-run-all": "^4.1.2",
+    "nyc": "^11.7.1",
+    "standard-version": "^4.3.0",
+    "validate-commit-msg": "^2.14.0"
   },
   "files": [
     "index.js",
@@ -31,6 +53,12 @@
     "parse-argv.js",
     "LICENSE",
     "README.md"
+  ],
+  "keywords": [
+    "es6",
+    "commonjs",
+    "transform",
+    "cjs"
   ],
   "config": {
     "validate-commit-msg": {
@@ -41,17 +69,7 @@
     "type": "git",
     "url": "git+https://github.com/adriancmiranda/esx.git"
   },
-  "keywords": [
-    "es6",
-    "commonjs",
-    "transform",
-    "cjs"
-  ],
   "bugs": {
     "url": "https://github.com/adriancmiranda/esx/issues"
-  },
-  "dependencies": {
-    "colors": "^1.2.3",
-    "glob": "^7.1.2"
   }
 }
