chore: add read-argv dependency

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:appveyor": "nyc npm test -- --no-cache --verbose",
     "build:fixtures": "node cli fixtures/{*,**/*}.next.js --replace=.next.js,.js",
     "watch:test": "npm test -- --no-cache --watch",
-    "lint": "eslint --ext .js index.js cli.js register.js parse-argv.js",
+    "lint": "eslint --ext .js index.js cli.js register.js",
     "travis:test": "npm test",
     "precommit": "run-s lint test",
     "commitmsg": "validate-commit-msg",
@@ -27,33 +27,31 @@
     "release": "standard-version"
   },
   "dependencies": {
-    "colors": "^1.2.4",
-    "crypto": "^1.0.1",
-    "glob": "^7.1.2",
-    "os-homedir": "^1.0.2"
+    "colors": "1.2.4",
+    "glob": "7.1.2",
+    "read-argv": "1.0.0"
   },
   "devDependencies": {
-    "ava": "^0.25.0",
-    "codecov": "^3.0.1",
-    "conventional-commit-types": "^2.2.0",
-    "cross-env": "^5.1.4",
-    "cross-spawn": "^6.0.5",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.11.0",
-    "husky": "^0.14.3",
-    "npm-check-updates": "^2.14.2",
-    "npm-run-all": "^4.1.2",
-    "nyc": "^11.7.1",
-    "standard-version": "^4.3.0",
-    "validate-commit-msg": "^2.14.0"
+    "ava": "0.25.0",
+    "codecov": "3.0.1",
+    "conventional-commit-types": "2.2.0",
+    "cross-env": "5.1.4",
+    "cross-spawn": "6.0.5",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb-base": "12.1.0",
+    "eslint-plugin-import": "2.11.0",
+    "husky": "0.14.3",
+    "npm-check-updates": "2.14.2",
+    "npm-run-all": "4.1.2",
+    "nyc": "11.7.1",
+    "standard-version": "4.3.0",
+    "validate-commit-msg": "2.14.0"
   },
   "files": [
     "example",
     "index.js",
     "cli.js",
     "register.js",
-    "parse-argv.js",
     "utilities.js",
     "LICENSE",
     "README.md"
