--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 material/
 test/coverage*
-fixtures/**/!(*.next|*.registered).js
+fixtures/library/**/!(*.next|*.registered).js
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # npmjs.com
