--- a/package.json
+++ b/package.json
@@ -3,24 +3,25 @@
   "author": "Adrian C. Miranda",
   "version": "1.0.0",
   "description": "ES6 to CommonJS",
-  "main": "index.js",
   "homepage": "https://github.com/adriancmiranda/esx#readme",
-  "tonicExampleFilename": "./example/runkit.js",
-  "license": "MIT",
   "bin": "index.js",
+  "main": "index.js",
+  "unpkg": "index.js",
+  "module": "index.next.js",
+  "tonicExampleFilename": "example/runkit.js",
+  "license": "MIT",
   "scripts": {
-    "prereport:coverage": "nyc report --reporter=text-lcov npm test > test/coverage.lcov",
-    "report:coverage": "codecov -f test/coverage.lcov --token=$CODECOV_TOKEN",
-    "upgrade": "ncu -a --loglevel verbose --packageFile package.json && npm i",
-    "dev": "run-p watch:*",
-    "test": "ava test/*.spec.js --color",
-    "test:coverage": "nyc npm test -- --no-cache --verbose",
-    "test:travis": "nyc npm test -- --no-cache --verbose",
-    "test:appveyor": "nyc npm test -- --no-cache --verbose",
-    "build:fixtures": "node cli fixtures/{*,**/*}.next.js --replace=.next.js,.js",
-    "watch:test": "npm test -- --no-cache --watch",
-    "lint": "eslint --ext .js index.js cli.js register.js parse-argv.js",
-    "travis:test": "npm test",
+    "upgrade": "npm-check -uEy",
+    "test": "cross-env NODE_ENV=test ava test/*.unit.js --color",
+    "test:fixtures": "cross-env NODE_ENV=test npm run build:lib",
+    "rollup": "rollup -c .bin/index.js",
+    "unbuild": "rimraf dist/*.{js,map,gz}",
+    "build:lib": "node cli fixtures/library/{*,**/*}.next.js --replace=.next.js,.js",
+    "build:minify": "npm run rollup -- --environment=SIGN,MINIFY,NODE_ENV:production",
+    "build:concat": "npm run unbuild && npm run rollup -- --environment=SIGN,INDENT,NODE_ENV:production",
+    "build": "run-s build:concat build:minify",
+    "dev": "npm test -- --no-cache --watch",
+    "lint": "eslint --ext .js index.next.js cli.next.js register.next.js",
     "precommit": "run-s lint test",
     "commitmsg": "validate-commit-msg",
     "prerelease": "npm test",
@@ -28,33 +29,63 @@
   },
   "dependencies": {
     "colors": "^1.2.4",
-    "crypto": "^1.0.1",
-    "glob": "^7.1.2",
-    "os-homedir": "^1.0.2"
+    "describe-type": "0.7.0",
+    "glob": "7.1.2",
+    "read-argv": "1.0.0",
+    "rx4d": "1.0.0"
   },
   "devDependencies": {
-    "ava": "^0.25.0",
-    "codecov": "^3.0.1",
-    "conventional-commit-types": "^2.2.0",
-    "cross-env": "^5.1.4",
-    "cross-spawn": "^6.0.5",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.11.0",
-    "husky": "^0.14.3",
-    "npm-check-updates": "^2.14.2",
-    "npm-run-all": "^4.1.2",
-    "nyc": "^11.7.1",
-    "standard-version": "^4.3.0",
-    "validate-commit-msg": "^2.14.0"
+    "@babel/cli": "7.0.0-beta.46",
+    "@babel/plugin-external-helpers": "7.0.0-beta.46",
+    "@babel/plugin-transform-runtime": "7.0.0-beta.46",
+    "@babel/polyfill": "7.0.0-beta.46",
+    "@babel/preset-env": "7.0.0-beta.46",
+    "@babel/register": "7.0.0-beta.46",
+    "ava": "1.0.0-beta.4",
+    "babel-eslint": "8.2.3",
+    "conventional-commit-types": "2.2.0",
+    "cross-env": "5.1.5",
+    "cross-spawn": "6.0.5",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-config-airbnb-base": "12.1.0",
+    "eslint-plugin-import": "2.11.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-react": "7.7.0",
+    "git-revision-webpack-plugin": "3.0.3",
+    "rimraf": "2.6.2",
+    "husky": "0.14.3",
+    "moment": "2.22.1",
+    "npm-check": "5.7.0",
+    "npm-run-all": "4.1.3",
+    "pirate-flag": "0.1.0",
+    "rollup": "0.58.2",
+    "rollup-plugin-babel": "4.0.0-beta.4",
+    "rollup-plugin-buble": "0.19.2",
+    "rollup-plugin-commonjs": "9.1.3",
+    "rollup-plugin-filesize": "1.5.0",
+    "rollup-plugin-node-resolve": "3.3.0",
+    "rollup-plugin-optimize-js": "0.0.4",
+    "rollup-plugin-uglify": "3.0.0",
+    "standard-version": "4.3.0",
+    "uglify-es": "3.3.9",
+    "validate-commit-msg": "2.14.0"
   },
   "files": [
     "example",
+    "utilities",
     "index.js",
+    "index.min.js",
+    "index.min.js.map",
+    "index.next.js",
     "cli.js",
+    "cli.min.js",
+    "cli.min.js.map",
+    "cli.next.js",
     "register.js",
-    "parse-argv.js",
-    "utilities.js",
+    "register.min.js",
+    "register.min.js.map",
+    "register.next.js",
     "LICENSE",
     "README.md"
   ],
@@ -64,6 +95,11 @@
     "transform",
     "cjs"
   ],
+  "ava": {
+    "require": [
+      "./.bin/ava/babel-register.js"
+    ]
+  },
   "config": {
     "validate-commit-msg": {
       "types": "conventional-commit-types"
