--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "tonicExampleFilename": "example/runkit.js",
   "license": "MIT",
   "scripts": {
-    "upgrade": "npm-check -uEy",
+    "upgrade": "npx npm-check -uEy",
     "test": "cross-env NODE_ENV=test ava test/*.unit.js --color",
     "test:fixtures": "cross-env NODE_ENV=test npm run build:lib",
     "rollup": "rollup -c .bin/index.js",
@@ -32,7 +32,7 @@
     "describe-type": "0.7.0",
     "glob": "7.1.2",
     "read-argv": "1.0.0",
-    "rx4d": "1.0.0"
+    "rx4d": "1.0.2"
   },
   "devDependencies": {
     "@babel/cli": "7.0.0-beta.46",
@@ -56,7 +56,6 @@
     "rimraf": "2.6.2",
     "husky": "0.14.3",
     "moment": "2.22.1",
-    "npm-check": "5.7.0",
     "npm-run-all": "4.1.3",
     "pirate-flag": "0.1.0",
     "rollup": "0.58.2",
