--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dev": "npm test -- --no-cache --watch",
     "lint": "eslint --ext .js index.next.js cli.next.js register.next.js",
     "precommit": "run-s lint test",
-    "commitmsg": "validate-commit-msg",
+    "commitmsg": "commitlint -x @commitlint/config-conventional -e $GIT_PARAMS",
     "prerelease": "npm test",
     "release": "standard-version"
   },
@@ -41,9 +41,10 @@
     "@babel/polyfill": "7.0.0-beta.46",
     "@babel/preset-env": "7.0.0-beta.46",
     "@babel/register": "7.0.0-beta.46",
+    "@commitlint/cli": "^6.2.0",
+    "@commitlint/config-conventional": "^6.1.3",
     "ava": "1.0.0-beta.4",
     "babel-eslint": "8.2.3",
-    "conventional-commit-types": "2.2.0",
     "cross-env": "5.1.5",
     "cross-spawn": "6.0.5",
     "eslint": "4.19.1",
@@ -53,11 +54,11 @@
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.7.0",
     "git-revision-webpack-plugin": "3.0.3",
-    "rimraf": "2.6.2",
     "husky": "0.14.3",
     "moment": "2.22.1",
     "npm-run-all": "4.1.3",
     "pirate-flag": "0.1.0",
+    "rimraf": "2.6.2",
     "rollup": "0.58.2",
     "rollup-plugin-babel": "4.0.0-beta.4",
     "rollup-plugin-buble": "0.19.2",
@@ -67,8 +68,7 @@
     "rollup-plugin-optimize-js": "0.0.4",
     "rollup-plugin-uglify": "3.0.0",
     "standard-version": "4.3.0",
-    "uglify-es": "3.3.9",
-    "validate-commit-msg": "2.14.0"
+    "uglify-es": "3.3.9"
   },
   "files": [
     "example",
@@ -98,11 +98,6 @@
     "require": [
       "./.bin/ava/babel-register.js"
     ]
-  },
-  "config": {
-    "validate-commit-msg": {
-      "types": "conventional-commit-types"
-    }
   },
   "repository": {
     "type": "git",
