--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "esx",
   "author": "Adrian C. Miranda",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "ES6 to CommonJS",
   "homepage": "https://github.com/adriancmiranda/esx#readme",
   "bin": "index.js",
@@ -16,7 +16,7 @@
     "test:fixtures": "cross-env NODE_ENV=test npm run build:lib",
     "rollup": "rollup -c .bin/index.js",
     "unbuild": "rimraf dist/*.{js,map,gz}",
-    "build:lib": "node cli fixtures/library/{*,**/*}.next.js --replace=.next.js,.js",
+    "build:lib": "node cli fixtures/library/{*,**/*}.next.js --replace='/.next(.js)?/i,$1'",
     "build:minify": "npm run rollup -- --environment=SIGN,MINIFY,NODE_ENV:production",
     "build:concat": "npm run unbuild && npm run rollup -- --environment=SIGN,INDENT,NODE_ENV:production",
     "build": "run-s build:concat build:minify",
