--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ Session.vim
 # dotfiles
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 .*
+!.bin
 !.eslintrc*
 !.editorconfig
 !.gitattributes
