--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "release": "standard-version"
   },
   "dependencies": {
-    "colors": "1.2.4",
+    "colors": "1.3.0",
     "describe-type": "0.7.0",
     "glob": "7.1.2",
     "read-argv": "1.0.0",
@@ -66,7 +66,7 @@
     "rollup-plugin-filesize": "1.5.0",
     "rollup-plugin-node-resolve": "3.3.0",
     "rollup-plugin-optimize-js": "0.0.4",
-    "rollup-plugin-uglify": "3.0.0",
+    "rollup-plugin-uglify": "4.0.0",
     "standard-version": "4.3.0",
     "uglify-es": "3.3.9"
   },
@@ -97,6 +97,7 @@
   ],
   "ava": {
     "require": [
+      "@babel/polyfill",
       "./.bin/ava/babel-register.js"
     ]
   },
