--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "tonicExampleFilename": "example/runkit.js",
   "license": "MIT",
   "scripts": {
-    "upgrade": "npx npm-check -uEy",
+    "check": "npx npm-check -uEy",
     "test": "cross-env NODE_ENV=test ava test/*.unit.js --color",
     "test:fixtures": "cross-env NODE_ENV=test npm run build:lib",
     "rollup": "rollup -c .bin/index.js",
@@ -28,10 +28,10 @@
     "release": "standard-version"
   },
   "dependencies": {
-    "acorn": "5.5.3",
-    "colors": "1.2.4",
+    "acorn": "5.7.1",
+    "colors": "1.3.1",
     "describe-type": "0.7.0",
-    "escodegen": "1.9.1",
+    "escodegen": "1.11.0",
     "glob": "7.1.2",
     "read-argv": "1.0.0"
   },
@@ -42,33 +42,33 @@
     "@babel/polyfill": "7.0.0-beta.46",
     "@babel/preset-env": "7.0.0-beta.46",
     "@babel/register": "7.0.0-beta.46",
-    "@commitlint/cli": "6.2.0",
-    "@commitlint/config-conventional": "6.1.3",
-    "ava": "1.0.0-beta.4",
-    "babel-eslint": "8.2.3",
-    "cross-env": "5.1.5",
+    "@commitlint/cli": "7.0.0",
+    "@commitlint/config-conventional": "7.0.1",
+    "ava": "1.0.0-beta.6",
+    "babel-eslint": "8.2.6",
+    "cross-env": "5.2.0",
     "cross-spawn": "6.0.5",
-    "eslint": "4.19.1",
-    "eslint-config-airbnb": "16.1.0",
-    "eslint-config-airbnb-base": "12.1.0",
-    "eslint-plugin-import": "2.12.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.8.2",
+    "eslint": "5.2.0",
+    "eslint-config-airbnb": "17.0.0",
+    "eslint-config-airbnb-base": "13.0.0",
+    "eslint-plugin-import": "2.13.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-react": "7.10.0",
     "git-revision-webpack-plugin": "3.0.3",
     "husky": "0.14.3",
-    "moment": "2.22.1",
+    "moment": "2.22.2",
     "npm-run-all": "4.1.3",
     "pirate-flag": "0.1.0",
     "rimraf": "2.6.2",
-    "rollup": "0.59.1",
+    "rollup": "0.63.4",
     "rollup-plugin-babel": "4.0.0-beta.4",
     "rollup-plugin-buble": "0.19.2",
     "rollup-plugin-commonjs": "9.1.3",
-    "rollup-plugin-filesize": "1.5.0",
+    "rollup-plugin-filesize": "4.0.1",
     "rollup-plugin-node-resolve": "3.3.0",
     "rollup-plugin-optimize-js": "0.0.4",
-    "rollup-plugin-uglify": "3.0.0",
-    "standard-version": "4.3.0",
+    "rollup-plugin-uglify": "4.0.0",
+    "standard-version": "4.4.0",
     "uglify-es": "3.3.9"
   },
   "files": [
