--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "scripts": {
     "check": "npx npm-check -uEy",
-    "test": "cross-env NODE_ENV=test ava test/*.unit.js --color",
+    "test": "cross-env NODE_ENV=test jest",
     "test:fixtures": "cross-env NODE_ENV=test npm run build:lib",
     "rollup": "rollup -c .bin/index.js",
     "unbuild": "rimraf dist/*.{js,map,gz}",
@@ -28,47 +28,49 @@
     "release": "standard-version"
   },
   "dependencies": {
-    "acorn": "5.7.1",
-    "colors": "1.3.1",
+    "acorn": "^7.2.0",
+    "colors": "^1.4.0",
     "describe-type": "0.7.0",
-    "escodegen": "1.11.0",
-    "glob": "7.1.2",
+    "escodegen": "^1.14.1",
+    "glob": "^7.1.6",
     "read-argv": "1.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.0.0-beta.46",
-    "@babel/plugin-external-helpers": "7.0.0-beta.46",
-    "@babel/plugin-transform-runtime": "7.0.0-beta.46",
-    "@babel/polyfill": "7.0.0-beta.46",
-    "@babel/preset-env": "7.0.0-beta.46",
-    "@babel/register": "7.0.0-beta.46",
-    "@commitlint/cli": "7.0.0",
-    "@commitlint/config-conventional": "7.0.1",
-    "ava": "1.0.0-beta.6",
-    "babel-eslint": "8.2.6",
-    "cross-env": "5.2.0",
-    "cross-spawn": "6.0.5",
-    "eslint": "5.2.0",
-    "eslint-config-airbnb": "17.0.0",
-    "eslint-config-airbnb-base": "13.0.0",
-    "eslint-plugin-import": "2.13.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-react": "7.10.0",
-    "git-revision-webpack-plugin": "3.0.3",
-    "husky": "0.14.3",
-    "moment": "2.22.2",
-    "npm-run-all": "4.1.3",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "7.9.6",
+    "@babel/plugin-external-helpers": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/register": "^7.9.0",
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "26.0.1",
+    "cross-env": "^7.0.2",
+    "cross-spawn": "^7.0.3",
+    "eslint": "^7.1.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.20.0",
+    "git-revision-webpack-plugin": "^3.0.6",
+    "husky": "^4.2.5",
+    "jest": "26.0.1",
+    "moment": "^2.26.0",
+    "npm-run-all": "^4.1.5",
     "pirate-flag": "0.1.0",
-    "rimraf": "2.6.2",
-    "rollup": "0.63.4",
-    "rollup-plugin-babel": "4.0.0-beta.4",
-    "rollup-plugin-buble": "0.19.2",
-    "rollup-plugin-commonjs": "9.1.3",
-    "rollup-plugin-filesize": "4.0.1",
-    "rollup-plugin-node-resolve": "3.3.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.10.9",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-buble": "^0.19.8",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-filesize": "^9.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-optimize-js": "0.0.4",
-    "rollup-plugin-uglify": "4.0.0",
-    "standard-version": "4.4.0",
+    "rollup-plugin-uglify": "^6.0.4",
+    "standard-version": "^8.0.0",
     "uglify-es": "3.3.9"
   },
   "files": [
@@ -96,10 +98,10 @@
     "transform",
     "cjs"
   ],
-  "ava": {
-    "require": [
-      "./.bin/ava/babel-register.js"
-    ]
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   },
   "repository": {
     "type": "git",
